; ModuleID = '/home/carl/AnghaBench/libuv/docs/code/tcp-echo-server/extr_main.c_echo_write.c'
source_filename = "/home/carl/AnghaBench/libuv/docs/code/tcp-echo-server/extr_main.c_echo_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"Write error %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @echo_write(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load i32, i32* @stderr, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i8* @uv_strerror(i32 %9)
  %11 = call i32 @fprintf(i32 %8, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %10)
  br label %12

12:                                               ; preds = %7, %2
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @free_write_req(i32* %13)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @uv_strerror(i32) #1

declare dso_local i32 @free_write_req(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
